--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <ul>sub1</ul>
+                <ul>sub2</ul>
+            </ul>
+            <ul>
+                <ul>sub3</ul>
+                <ul>sub4</ul>
+            </ul>
+            <ul>
+                <ul></ul>
+                <ul></ul>
+            </ul>
+            <ul>
+                <ul></ul>
+                <ul></ul>
+            </ul>
+            <ul>
+                <ul></ul>
+                <ul></ul>
+            </ul>
+        </nav>
+        <h1>
+            A good title.
+        </h1>
+        
+    </header>
+</body>
+</html>
